# Simpleton-Engine

./: .gitattributes  README.md
Pack/: CMakeLists.txt  app.cpp  app.hpp  blit images.cpp  blit images.hpp  load images.cpp  load images.hpp  main.cpp  pack rects.cpp  pack rects.hpp  rects from images.cpp  rects from images.hpp  search dir.cpp  search dir.hpp  sort by frame.cpp  sort by frame.hpp  stb_rect_pack.c  stb_rect_pack.h  write atlas.cpp  write atlas.hpp  write image.cpp  write image.hpp
Simpleton Engine/: Simpleton_Engine.cpp  Simpleton_Engine.hpp  Simpleton_EnginePriv.hpp  impl0.cpp
Simpleton Engine.xcodeproj/: project.pbxproj
Simpleton Engine.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Simpleton Engine/Application/: app.cpp  app.hpp  sdl app.cpp  sdl app.hpp
Simpleton Engine/Box2D/: collision categories.hpp  nanovg debug draw.inl  object types.hpp  parse json.inl
Simpleton Engine/Camera 2D/: animate.cpp  animate.hpp  camera.cpp  camera.hpp  camera.inl  constant scale.cpp  constant scale.hpp  constant speed.cpp  constant speed.hpp  linear move.cpp  linear move.hpp  linear zoom.cpp  linear zoom.hpp  matrix mul.hpp  move.cpp  move.hpp  props.cpp  props.hpp  rotate.hpp  rotate.inl  target pos.cpp  target pos.hpp  target scale.cpp  target scale.hpp  target.hpp  transform.cpp  transform.hpp  transform.inl  zoom to fit.cpp  zoom to fit.hpp  zoom to fit.inl  zoom.cpp  zoom.hpp
Simpleton Engine/Data/: json.hpp
Simpleton Engine/ECS/: comp inits.hpp  level manager.inl  level.hpp  registry.hpp
Test/: impl0.cpp  impl1.cpp
(+292 files in other folders)
